syntax = "proto3";

package calculator;

option go_package = "github.com/tbh26/harbor/modern_api/grpc/go_intro/calculator/proto";

message SumRequest {
  int32 first_operand = 1;
  int32 second_operand = 2;
}

message SumResponse {
  int32 result = 1;
}

